# 4gaboards_agent_plus

./: .env.example  .gitignore  4gaboard_agent_plus_defense_20260624_230329.pptx  CLAUDE.md  README.md  TECHNICAL_REPORT.md  start.sh  todo.md  变异测试设计.md  开发日志.md
app/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/outputs/basic/: README.md  baseline.json  baseline_tags.json  features.json  scenarios.json
app/server/: index.ts  tsconfig.json
app/server/lib/: lock.ts  reportIO.ts  sessionPool.ts  sse.ts
app/server/routes/: baseline.ts  batch.ts  catalog.ts  mutation.ts  regenerate.ts  reports.ts  runScenario.ts
app/src/: cli.ts  concurrency.ts  config.ts  docs.ts  extractFeatures.ts  generateScenarios.ts  http.ts  inferDependencies.ts  llm.ts  scenarioStore.ts  schemas.ts
app/src/agent/: dependencyGraph.ts  recon-card-tools.ts  recon-editor-modes.ts  recon-settings.ts  recon.ts  smoke.ts
app/src/agent/browser/: context.ts  observation.ts
app/src/agent/cli/: run-batch.ts  run-judge-cost.ts  run-mutation.ts  run.ts
app/src/agent/mutation/: mutants.ts  operators.ts  report.ts  runMutation.ts  runMutationTrace.ts  traceFaults.ts
app/src/agent/react/: loop.ts  prompt.ts  types.ts
app/web/: index.html  package-lock.json  package.json  tsconfig.web.json  vite.config.ts
app/web/src/: App.tsx  main.tsx  types.ts
scenario_generator/: .gitignore  README.md  pyproject.toml
scenario_generator/src/scenario_generator/: __init__.py  config.py  docs.py  extract_features.py  generate_scenarios.py  llm.py  schema.py
(+35 files in other folders)
